--- a/sample/index.html
+++ b/sample/index.html
@@ -1,15 +1,1 @@
-﻿<html ng-app="myApp">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link href="sample-bundle.css" rel="stylesheet" type="text/css" />
-    <script src="sample-bundle.js"></script>
-</head>
-<body class="container">
-    <div ng-controller="MainCtrl">
-        <table tr-ng-grid items='myItems'></table>
-    </div>
-</body>
-</html>
+startbootstrap-simple-sidebar/css/simple-sidebar.css
